force-app/main/default/objects/SBQQ__ImportColumn__c/fields/SBQQ__ColumnIndex__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ColumnIndex__c</fullName>
        <description>A numeric index value that represents the location of the column. Column index must start from 1.</description>
        <inlineHelpText>Enter a numeric index value that represents the location of the column. Column index must start from 1.</inlineHelpText>
        <label>Column Index</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>