force-app/main/default/objects/SBQQ__ImportColumn__c/fields/SBQQ__FieldName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FieldName__c</fullName>
        <description>This is the API Name.</description>
        <inlineHelpText>Enter the API Name.</inlineHelpText>
        <label>Field Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Partner Discount</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>List Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>