force-app/main/default/objects/SBQQ__ImportColumn__c/fields/SBQQ__Key__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Key__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This column represents a unique key column.</description>
        <inlineHelpText>Select if this column should be a unique key column.</inlineHelpText>
        <label>Key</label>
        <type>Checkbox</type>
    </CustomField>