force-app/main/default/objects/SBQQ__ImportColumn__c/validationRules/SBQQ__Column_index_must_start_from_1.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Column_index_must_start_from_1</fullName>
        <active>true</active>
        <description>Column Index must start from 1.</description>
        <errorConditionFormula>If ( SBQQ__ColumnIndex__c &lt;= 0, true, false)</errorConditionFormula>
        <errorDisplayField>SBQQ__ColumnIndex__c</errorDisplayField>
        <errorMessage>Column Index must start from 1.</errorMessage>
    </ValidationRule>